; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mpt/extr_mpt.c_mpt_core_load.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mpt/extr_mpt.c_mpt_core_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpt_personality = type { i32 }

@MPT_NUM_REPLY_HANDLERS = common dso_local global i32 0, align 4
@mpt_default_reply_handler = common dso_local global i32 0, align 4
@mpt_reply_handlers = common dso_local global i32* null, align 8
@mpt_event_reply_handler = common dso_local global i32 0, align 4
@MPT_REPLY_HANDLER_EVENTS = common dso_local global i32 0, align 4
@mpt_config_reply_handler = common dso_local global i32 0, align 4
@MPT_REPLY_HANDLER_CONFIG = common dso_local global i32 0, align 4
@mpt_handshake_reply_handler = common dso_local global i32 0, align 4
@MPT_REPLY_HANDLER_HANDSHAKE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mpt_personality*)* @mpt_core_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpt_core_load(%struct.mpt_personality* %0) #0 {
  %2 = alloca %struct.mpt_personality*, align 8
  %3 = alloca i32, align 4
  store %struct.mpt_personality* %0, %struct.mpt_personality** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %14, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @MPT_NUM_REPLY_HANDLERS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %17

8:                                                ; preds = %4
  %9 = load i32, i32* @mpt_default_reply_handler, align 4
  %10 = load i32*, i32** @mpt_reply_handlers, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  store i32 %9, i32* %13, align 4
  br label %14

14:                                               ; preds = %8
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %4

17:                                               ; preds = %4
  %18 = load i32, i32* @mpt_event_reply_handler, align 4
  %19 = load i32*, i32** @mpt_reply_handlers, align 8
  %20 = load i32, i32* @MPT_REPLY_HANDLER_EVENTS, align 4
  %21 = call i64 @MPT_CBI(i32 %20)
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  store i32 %18, i32* %22, align 4
  %23 = load i32, i32* @mpt_config_reply_handler, align 4
  %24 = load i32*, i32** @mpt_reply_handlers, align 8
  %25 = load i32, i32* @MPT_REPLY_HANDLER_CONFIG, align 4
  %26 = call i64 @MPT_CBI(i32 %25)
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  store i32 %23, i32* %27, align 4
  %28 = load i32, i32* @mpt_handshake_reply_handler, align 4
  %29 = load i32*, i32** @mpt_reply_handlers, align 8
  %30 = load i32, i32* @MPT_REPLY_HANDLER_HANDSHAKE, align 4
  %31 = call i64 @MPT_CBI(i32 %30)
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  store i32 %28, i32* %32, align 4
  ret i32 0
}

declare dso_local i64 @MPT_CBI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
